--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -1,8 +1,49 @@
-@import url(/assets/fonts/fonts.css);
+/*================ Icons =================*/
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?p89t6c');
+    src:  url('../fonts/icomoon.eot?p89t6c#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?p89t6c') format('truetype'),
+    url('../fonts/icomoon.woff?p89t6c') format('woff'),
+    url('../fonts/icomoon.svg?p89t6c#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow:before {
+    content: "\e900";
+}
+.icon-git:before {
+    content: "\e901";
+}
+.icon-linkedin:before {
+    content: "\e902";
+}
+.icon-mail:before {
+    content: "\e903";
+}
+  
+/*================ END Icons =================*/
+
+
 
 .editor h1 {
-    font-size: 5rem;
-    padding-bottom: 3.2rem;
+    font-size: 4rem;
+    padding-bottom: 1.6rem;
 }
 
 .editor .menu h1 {
@@ -10,12 +51,12 @@
 }
 
 .editor h2 {
-    font-size: 4rem;
+    font-size: 3rem;
     padding-bottom: 1.6rem;
 }
 
 .editor h3 {
-    font-size: 3.2rem;
+    font-size: 2rem;
 }
 
 .editor p {
@@ -24,13 +65,21 @@
 
 .editor p,
 .editor button {
-    font-size: 1.8rem;
-    padding-bottom: 1.6rem;
+    font-size: 1.4rem;
+    padding-bottom: 1.2rem;
     font-family: var(--font-paragraph);
 }
 
+.editor p.text-med {
+    font-size: 1.4rem;
+}
+
+.editor p.text-min {
+    font-size: 1.2rem;
+}
+
 .editor a {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     letter-spacing: 0.05rem;
 }
 
@@ -38,7 +87,7 @@
     letter-spacing: 0.18rem;
 }
 
-small {
+.editor .topic {
     font-weight: 400;
     font-size: 1.4rem;
     letter-spacing: 0.1rem;
@@ -47,8 +96,8 @@ small {
 
 
 /*================ Text Transform =================*/
-small, 
-.editor h3 {
+.editor h3,
+.editor .topic {
     text-transform: uppercase;
 }
 
@@ -60,7 +109,6 @@ small,
     font-weight: 700; 
 }
 
-small,
 .editor a {
     font-weight: 500;
 }
@@ -78,7 +126,6 @@ small,
 
 
 /*================ Colors =================*/
-small,
 .editor h1,
 .editor h2,
 .editor h3,
@@ -86,25 +133,84 @@ small,
 .editor a {
     color: var(--color-light);
 }
+
+.editor .topic {
+    color: var(--color-yellow);   
+}
+
 /*================ END Colors =================*/
 
 
 
 /*================ Responsive =================*/
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     .editor h1 {
-        font-size: 4rem;
-    }   
+        font-size: 3rem;
+    }
 }
 
-@media (max-width: 426px) {
+@media (min-width: 481px) {
     .editor h1 {
-        font-size: 3.6rem;
+        font-size: 5rem;
+        padding-bottom: 3.2rem;
     }
-    
+
     .editor h2 {
-        font-size: 3.2rem;
+        font-size: 4rem;
         padding-bottom: 1.6rem;
     }
-} 
+
+    .editor h3 {
+        font-size: 3.2rem;
+    }
+
+    .editor p,
+    .editor button {
+        font-size: 1.8rem;
+        padding-bottom: 1.6rem;
+        font-family: var(--font-paragraph);
+    }
+
+    .editor p.text-med {
+        font-size: 1.6rem;
+    }
+
+    .editor p.text-min {
+        font-size: 1.4rem;
+    }
+
+    .editor a {
+        font-size: 1.6rem;
+        letter-spacing: 0.05rem;
+    }
+
+    .editor .topic {
+        font-weight: 400;
+        font-size: 1.4rem;
+        letter-spacing: 0.1rem;
+    }
+}
+
+@media (min-width: 768px) {
+
+    
+}
+
+@media (max-width: 992px) {
+
+}
+
+@media (min-width: 992px) {
+    
+}
+
+@media (min-width: 1200px) {
+
+}
+
+@media (min-width: 1920px) {
+
+}
+
+
 /*================ END Responsive =================*/
